<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="89dp"
        android:layout_marginBottom="50dp"
        android:text="@string/account"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/hand"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/hand_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="43dp"
        android:text="@string/hand_value"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/hand"
        app:layout_constraintTop_toBottomOf="@+id/account_value" />

    <TextView
        android:id="@+id/account_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="105dp"
        android:text="@string/account_value"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/hand_value"
        app:layout_constraintTop_toBottomOf="@+id/select_amount" />

    <TextView
        android:id="@+id/hand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hand"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/hand_value"
        app:layout_constraintStart_toStartOf="@+id/account"
        app:layout_constraintTop_toBottomOf="@+id/hand_value" />

    <Button
        android:id="@+id/deposit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="184dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="185dp"
        android:text="@string/deposit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/withdraw"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account" />

    <Button
        android:id="@+id/withdraw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/withdraw"
        app:layout_constraintBaseline_toBaselineOf="@+id/deposit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/deposit" />

    <Spinner
        android:id="@+id/select_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/spinner_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="29dp"
        android:text="@string/spinner_title"
        app:layout_constraintBottom_toTopOf="@+id/select_amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>